fetchAPI post fix

--- a/TwitterCloneUi/homepage.html
+++ b/TwitterCloneUi/homepage.html
@@ -11,7 +11,7 @@
 
     <script src="./scripts/homepage-post-button.js" defer></script>
     <script src="./scripts/homepage-post-to-timeline.js" defer></script>
-    <script src="./scripts/fetchAPI.js  "></script>
+    <script src="./scripts/fetch-API-posts.js" defer></script>  
   </head>
   <body>
     <div class="overlay-page" id="overlayPage"></div>
